# really-deep-research

./: .gitignore  README.md  README_zh.md  config.yaml  langgraph.json  main.py  pyproject.toml
.cursor/rules/: agents-design.mdc  implementation.mdc  project-overview.mdc
app/core/: config.py
backend/config/: __init__.py  agents.py  configuration.py  loader.py  tools.py
backend/factory/: __init__.py  agents.py  embeddings.py  llms.py
backend/prompts/: __init__.py  template.py
backend/utils/: json_utils.py
